--- a/pages/recommendation/recommendation.html
+++ b/pages/recommendation/recommendation.html
@@ -194,7 +194,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -209,7 +209,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -224,7 +224,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -241,7 +241,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -256,7 +256,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -271,7 +271,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -287,7 +287,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -302,7 +302,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
@@ -317,7 +317,7 @@
             <div class="col-md-4">
               <div class="card">
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
-                <div class="content-box">
+                <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
                   </h5>
                   <span>Artist</span>
