--- a/pages/filterSearch/filterSearch.html
+++ b/pages/filterSearch/filterSearch.html
@@ -179,175 +179,185 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-      <div class="row justify-content-center">
-        <h4 class="search-label">
-          <b>Search for experts, mentors, users and explore their
-            Portfolio.</b>
-        </h4>
-      </div>
-      <div class="row justify-content-center">
-        <form class="navbar-form col-md-6" role="search">
-          <div class="input-group add-on">
-            <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text" />
-            <div class="input-group-btn">
-              <button class="btn btn-default" type="submit">
-                <i class="fas fa-search"></i>
-              </button>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <div class="row mt-3 justify-content-center ssdrop1" style="margin-left: 3%;">
-        <div class="col-md-2 text-center" style="margin-right: -5%;margin-left: 0%;">
-          <div class="dropdown">
-            <button class="btn outline-secondary-dropdown dropdown-toggle" type="button" id="dropdownMenuButton"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Show All
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">By User</a>
-              <a class="dropdown-item" href="#">By Post</a>
-              <a class="dropdown-item" href="#">By Training</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-2 text-center ssdrop2" style="margin-right: -3%;margin-left: -4;">
-          <div class="dropdown">
-            <button class="btn outline-secondary-dropdown dropdown-toggle" type="button" id="dropdownMenuButton"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Region
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Inida</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-2 text-center ssdrop3">
-          <div class="dropdown">
-            <button class="btn outline-secondary-dropdown dropdown-toggle" type="button" id="dropdownMenuButton"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Field of WOrk
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-2 text-center ssdrop4" style="margin-right: 0%;margin-left: -4;">
-          <div class="dropdown">
-            <button class="btn outline-secondary-dropdown dropdown-toggle ssbtnsort" type="button"
-              id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Sort By
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <section class="connected-people mt-4 ssprofile">
+      <div class="col-md-12">
         <div class="row justify-content-center">
           <h4 class="search-label">
-            <b> People you'd want to connect with</b>
+            <b>Search for experts, mentors, users and explore their
+              Portfolio.</b>
           </h4>
         </div>
-        <div class="row ml-5 justify-content-center profile-photo">
-          <div class="col-md-2 profile-box">
-            <div class="cerative"></div>
-            <img src="../../images/thumbImg_4.png" alt="..." class="img-thumbnail" />
-            <div class="thumnail-footer">
-              <b>Pramod Kamble</b>
-              <p>Sculptor , Painter</p>
-              <i>Thought Leader</i>
+        <div class="row justify-content-center">
+          <form class="navbar-form col-md-11" role="search">
+            <div class="input-group add-on ssinputgrp">
+              <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text" />
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
             </div>
-          </div>
-          <div class="col-md-2 profile-box">
-            <div class="cerative"></div>
-            <img src="../../images/painting.png" alt="..." class="img-thumbnail" />
-            <div class="thumnail-footer">
-              <b>Pramod Kamble</b>
-              <p>Sculptor , Painter</p>
-              <i>Thought Leader</i>
-            </div>
-          </div>
-          <div class="col-md-2 profile-box">
-            <div class="cerative"></div>
-            <img src="../../images/varun.png" alt="..." class="img-thumbnail" />
-            <div class="thumnail-footer">
-              <b>Pramod Kamble</b>
-              <p>Sculptor , Painter</p>
-              <i>Thought Leader</i>
-            </div>
-          </div>
-          <div class="col-md-2 profile-box">
-            <div class="cerative"></div>
-            <img src="../../images/thomas.png" alt="..." class="img-thumbnail" />
-            <div class="thumnail-footer">
-              <b>Pramod Kamble</b>
-              <p>Sculptor , Painter</p>
-              <i>Thought Leader</i>
-            </div>
-          </div>
-
-          <div class="col-md-2 profile-box">
-            <div class="cerative"></div>
-            <img src="../../images/tania.png" alt="..." class="img-thumbnail" />
-            <div class="thumnail-footer">
-              <b>Pramod Kamble</b>
-              <p>Sculptor , Painter</p>
-              <i>Thought Leader</i>
-            </div>
-          </div>
+          </form>
         </div>
-        <div class="row justify-content-end">
-          <button class="btn primary-btn float-right">View More</button>
-        </div>
-      </section>
-
-      <section class="mt-4">
-        <div class="row simple-effet-image mt-3 ml-5 justify-content-center clearfix">
-          <div class="col-sm-4">
-            <div class="effect-image-1">
-              <img src="https://www.montereyairport.com/sites/main/files/main-images/camera_lense_0.jpeg"
-                alt="image-1" />
-              <div class="overlay-text overlay-text-1">
-                <p>lorem ipsum text init lorem ipsum text init</p>
+        <div class="row mt-3 justify-content-center ssdrop1">
+          <div class="col-md-1 text-center">
+            <div class="dropdown">
+              <button class="btn outline-secondary-dropdown dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Show All
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">By User</a>
+                <a class="dropdown-item" href="#">By Post</a>
+                <a class="dropdown-item" href="#">By Training</a>
               </div>
             </div>
           </div>
-
-
-          <div class="col-sm-4">
-            <div class="effect-image-1">
-              <img src="https://www.montereyairport.com/sites/main/files/main-images/camera_lense_0.jpeg"
-                alt="image-1" />
-              <div class="overlay-text overlay-text-2">
-                <p>lorem ipsum text init lorem ipsum text init</p>
+          <div class="col-md-2 text-center ssdrop2">
+            <div class="dropdown">
+              <button class="btn outline-secondary-dropdown dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Region
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Inida</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </div>
           </div>
-          <div class="col-sm-4 ">
-            <div class="effect-image-1">
-              <img src="https://www.montereyairport.com/sites/main/files/main-images/camera_lense_0.jpeg"
-                alt="image-1" />
-              <div class="overlay-text overlay-text-2">
-                <p>lorem ipsum text init lorem ipsum text init</p>
+          <div class="col-md-2 text-center ssdrop3">
+            <div class="dropdown">
+              <button class="btn outline-secondary-dropdown dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Field of WOrk
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </div>
           </div>
+          <div class="col-md-5"> </div>
+          <div class="col-md-1 text-center ssdrop4">
+            <div class="dropdown">
+              <button class="btn outline-secondary-dropdown dropdown-toggle ssbtnsort" type="button"
+                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sort By
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+          </div>
+          <div class=""></div>
+        </div>
+      </div>
 
-        </div>
-        <div class="row justify-content-end mt-2">
-          <button class="btn primary-btn float-right">View More</button>
-        </div>
-      </section>
+
+      <div class="col-md-12">
+        <section class="connected-people mt-4 ssprofile">
+          <div class="row justify-content-center">
+            <h4 class="search-label">
+              <b> People you'd want to connect with</b>
+            </h4>
+          </div>
+          <div class="row ml-5 justify-content-center profile-photo">
+            <div class="col-md-2 profile-box">
+              <div class="cerative"></div>
+              <img src="../../images/thumbImg_4.png" alt="..." class="img-thumbnail" />
+              <div class="thumnail-footer">
+                <b>Pramod Kamble</b>
+                <p>Sculptor , Painter</p>
+                <i>Thought Leader</i>
+              </div>
+            </div>
+            <div class="col-md-2 profile-box">
+              <div class="cerative"></div>
+              <img src="../../images/painting.png" alt="..." class="img-thumbnail" />
+              <div class="thumnail-footer">
+                <b>Pramod Kamble</b>
+                <p>Sculptor , Painter</p>
+                <i>Thought Leader</i>
+              </div>
+            </div>
+            <div class="col-md-2 profile-box">
+              <div class="cerative"></div>
+              <img src="../../images/varun.png" alt="..." class="img-thumbnail" />
+              <div class="thumnail-footer">
+                <b>Pramod Kamble</b>
+                <p>Sculptor , Painter</p>
+                <i>Thought Leader</i>
+              </div>
+            </div>
+            <div class="col-md-2 profile-box">
+              <div class="cerative"></div>
+              <img src="../../images/thomas.png" alt="..." class="img-thumbnail" />
+              <div class="thumnail-footer">
+                <b>Pramod Kamble</b>
+                <p>Sculptor , Painter</p>
+                <i>Thought Leader</i>
+              </div>
+            </div>
+
+            <div class="col-md-2 profile-box">
+              <div class="cerative"></div>
+              <img src="../../images/tania.png" alt="..." class="img-thumbnail" />
+              <div class="thumnail-footer">
+                <b>Pramod Kamble</b>
+                <p>Sculptor , Painter</p>
+                <i>Thought Leader</i>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-end">
+            <button class="btn primary-btn float-right">View More</button>
+          </div>
+        </section>
+
+        <section class="mt-4">
+          <div class="row simple-effet-image mt-3 ml-5 justify-content-center clearfix">
+            <div class="col-sm-4">
+              <div class="effect-image-1">
+                <img src="https://www.montereyairport.com/sites/main/files/main-images/camera_lense_0.jpeg"
+                  alt="image-1" />
+                <div class="overlay-text overlay-text-1">
+                  <p>lorem ipsum text init lorem ipsum text init</p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-sm-4">
+              <div class="effect-image-1">
+                <img src="https://www.montereyairport.com/sites/main/files/main-images/camera_lense_0.jpeg"
+                  alt="image-1" />
+                <div class="overlay-text overlay-text-2">
+                  <p>lorem ipsum text init lorem ipsum text init</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4 ">
+              <div class="effect-image-1">
+                <img src="https://www.montereyairport.com/sites/main/files/main-images/camera_lense_0.jpeg"
+                  alt="image-1" />
+                <div class="overlay-text overlay-text-2">
+                  <p>lorem ipsum text init lorem ipsum text init</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="row justify-content-end mt-2">
+            <button class="btn primary-btn float-right">View More</button>
+          </div>
+        </section>
+      </div>
+
+
+
     </div>
 
     <!-- Page Model -->
