--- a/pages/chat/chat.html
+++ b/pages/chat/chat.html
@@ -494,7 +494,10 @@
                           </div>
                           <div class="d-flex justify-content-end mb-4">
                             <div class="msg_cotainer_send">
-                              Hi Khalid i am good tnx how about you?
+                              <div class="img-container">
+                            <img src="../../images/superman.png" width=>
+                            </div>
+                             <p> Hi Khalid i am good tnx how about you?</p>
                               <span class="msg_time_send">8:55 AM, Today</span>
                             </div>
                             <div class="img_cont_msg">
