feed back changes

--- a/pages/problemRequest/problemRequest.html
+++ b/pages/problemRequest/problemRequest.html
@@ -482,7 +482,7 @@
                       </button>
                     </div>
                     <div class="multi-screen-level">
-                    <div class="screen1" style="display: none;">
+                    <div class="screen1" style="">
                       <div class="row ml-3">
                         <p class="problem-title"><b>Need help to solve a problem? No problem!</b></p>
                        
