--- a/pages/landingPage/landingPage.html
+++ b/pages/landingPage/landingPage.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
 </head>
 
-<body class="" style="background: #e4e4e4;">
+<body class="" style="background: #e4e4e4; margin-right: 0%;">
     <div class="wrapper">
         <!-- Navbar Main -->
         <nav class=" navbar navbar-expand navbar-white navbar-light" style="box-shadow: 0px -1px 9px #666;">
@@ -29,72 +29,74 @@
             </ul>
 
             <!-- Right navbar links -->
+
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Josh Clark
+                <li class="nav-item text-right">
+                    <button type="button" class="btn btn-primary loginbtn">Login</button>
+                </li>
+                <li class="nav-item navbarLink">
+                    <a href="#" style="font-family: none;"><u>Not a member yet?Sign up now!</u>
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Edit bio</a></li>
-                        <li><a class="dropdown-item" href="#">Change language</a></li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
-                    </ul>
                 </li>
                 <li class="nav-item profilepic">
-                    <a class="nav-link" href="#"><img src="../../images/josh.png" style="width: 30px;" /></a>
+                    <a class="nav-link" href="#"><img src="../../images/searchinn.png" style="width: 30px;" /></a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" data-toggle="dropdown" href="#">
-                        <i class="far fa-bell"></i>
-                        <span class="badge badge-warning navbar-badge">15</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <span class="dropdown-item dropdown-header">15 Notifications</span>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i> 4 new messages
-                            <span class="float-right text-muted text-sm">3 mins</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-users mr-2"></i> 8 friend requests
-                            <span class="float-right text-muted text-sm">12 hours</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-file mr-2"></i> 3 new reports
-                            <span class="float-right text-muted text-sm">2 days</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
-                    </div>
-                </li>
+
             </ul>
         </nav>
-
-
-        <section>
+        <div class="container-fluid">
             <div class="row">
-                <img src="../../images/LP-01.jpg" alt="" style="width: 100%;">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="../../images/LP-01.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="../../images/LP-02.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="../../images/LP-03.jpg" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="../../images/LP-04.jpg" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="../../images/LP-05.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
+        </div>
+
+        <div class="container-fluid">
             <div class="row">
                 <h5 class="micafilatag" style="margin-left: 44%;">Best of MiCafila!</h5>
                 <span></span>
             </div>
+        </div>
+
+        <div class="container-fluid">
             <div class="row landingMain" style="background-color: white;">
                 <h4 style="padding-left: 37%;
-                padding-top: 3%;">Some of our community's best
+                    padding-top: 3%;">Some of our community's best
                     <br>
                     sharing their finest!
                 </h4>
             </div>
-            <div class="row">
+        </div>
+
+        <div class="container-fluid">
+            <div class="row" style="background-color: white;">
                 <div class="col-md-6" style="background: white;">
-                    <img src="../../images/L1.png" alt="...." style="width: 100%;">
+                    <img src="../../images/imgs1.png" alt="...." style="width: 100%;">
                 </div>
                 <div class="col-md-2" style="background-color: white;"></div>
                 <div class="col-md-2" style="background: white;">
@@ -104,9 +106,12 @@
                 </div>
                 <div class="col-md-2" style="background-color:white"></div>
             </div>
-            <div class="row">
+        </div>
+
+        <div class="container-fluid">
+            <div class="row" style="background-color: white;">
                 <div class="col-md-3">
-                    <img src="../../images/port1.png" alt="" style="width: 100%;">
+                    <img src="../../images/paintimg2.jpg" alt="" style="width: 100%;">
                 </div>
                 <div class="col-md-3">
                     <img src="../../images/port2.png" alt="" style="width: 100%;">
@@ -115,43 +120,67 @@
                     <img src="../../images/port3.png" alt="" style="width: 100%;">
                 </div>
                 <div class="col-md-3">
-                    <img src="../../images/port1.png" alt="" style="width: 100%;">
+                    <img src="../../images/paintimg1.jpeg" alt="" style="width: 100%;">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-2" style="background-color: white;"></div>
-                <div class="col-md-2" style="background: white;">
+        </div>
+        <div class="container-fluid">
+            <div class="row" style="background-color:white;">
+                <div class="col-md-2"></div>
+                <div class="col-md-2">
                     <h5 class="pfont">Learn from the masters</h5>
                     <p>Show the world what you're capable of MiCafila's Community of mentors will help you to take
                         your
                         skills to the next level.</p>
                 </div>
-                <div class="col-md-2" style="background-color: white;"></div>
+                <div class="col-md-2"></div>
 
-                <div class="col-md-6" style="background: white;">
-                    <img src="../../images/L1.png" alt="...." style="width: 100%;">
+                <div class="col-md-6" style="background-color: white;">
+                    <img src="../../images/master2.png" alt="...." style="width: 100%;">
                 </div>
             </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row" style="background-color: white;">
+                <div class="col-md-3">
+                    <img src="../../images/img4.jpg" alt="" style="width: 100%;">
+                </div>
+                <div class="col-md-3">
+                    <img src="../../images/img4.jpg" alt="" style="width: 100%;">
+                </div>
+                <div class="col-md-3">
+                    <img src="../../images/img4.jpg" alt="" style="width: 100%;">
+                </div>
+                <div class="col-md-3">
+                    <img src="../../images/img4.jpg" alt="" style="width: 100%;">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row" style="background-color: white;">
+                <div class="col-md-2"></div>
+                <div class="col-md-3">
+                    <h5 class="pfont">What do we bring to the table?</h5>
+                </div>
+                <div class="col-md-7">
+                </div>
+            </div>
+            <div class="row" style="background-color: white;">
+                <div class="col-md-3"></div>
+                <div class="col-md-2"><img src="../../images/laptop1.png" style="width: 100%;"></div>
+                <div class="col-md-2"><img src="../../images/laptop.jpg" alt="" style="width: 100%;"></div>
+                <div class="col-md-2"><img src="../../images/laptop3.png" style="width: 100%;"></div>
+                <div class="col-md-3"></div>
+            </div>
+        </div>
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3">
-                    <img src="../../images/port1.png" alt="" style="width: 100%;">
-                </div>
-                <div class="col-md-3">
-                    <img src="../../images/port2.png" alt="" style="width: 100%;">
-                </div>
-                <div class="col-md-3">
-                    <img src="../../images/port3.png" alt="" style="width: 100%;">
-                </div>
-                <div class="col-md-3">
-                    <img src="../../images/port1.png" alt="" style="width: 100%;">
-                </div>
+                <img src="../../images/lastlanding.png" alt="" width="100%">
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>What do we bring to the table?</h5>
-                </div>
-            </div>
-        </section>
+        </div>
+
+
 
         <!-- Main Footer -->
         <footer class="main-footer" style="margin-left: 0%;">
@@ -163,13 +192,20 @@
     </div>
 
 
+
     <!-- REQUIRED SCRIPTS -->
     <!-- jQuery -->
     <script src="../../plugins/jquery/jquery.min.js"></script>
     <!-- AdminLTE -->
     <script src="../../dist/js/adminlte.js"></script>
     <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../vendor/bootstrap/js/bootstrap.js"></script>
+    <!-- <script src="../../bootstrap/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script type="text/javascript">
+        $(document).ready(function () {
+            $('#imageCarousel').carousel();
+        });
+    </script> -->
 </body>
 
 </html>
