--- a/pages/myProblems/mysolution.html
+++ b/pages/myProblems/mysolution.html
@@ -810,19 +810,19 @@
                 </div>
                 <div class="right-attachments mb-1">
                   <div>
-                    <span>filename.pdf</span>
+                    <span class="filename">filename.pdf</span>
                     <i class="fas fa-times-circle"></i>
                   </div>
                   <div>
-                    <span>filename1.pdf</span>
+                    <span class="filename">filename1.pdf</span>
                     <i class="fas fa-times-circle"></i>
                   </div>
                   <div>
-                    <span>filename2.pdf</span>
+                    <span class="filename">filename2.pdf</span>
                     <i class="fas fa-times-circle"></i>
                   </div>
                   <div>
-                    <span>filename3.pdf</span>
+                    <span class="filename">filename3.pdf</span>
                     <i class="fas fa-times-circle"></i>
                   </div>
                   <div>
