--- a/pages/portfolioUploadWork/portfolioUploadWork.html
+++ b/pages/portfolioUploadWork/portfolioUploadWork.html
@@ -252,11 +252,14 @@
               </div>
               <div class="col-lg-7 col-md-7 mt-4 upload-section">
                 <div class="upload-frame ">
-                  <span class="upload-icon"></span>
+                  
+                  <img src="../../images/uploadIcon.png">
+                  <input type="file" class="file_upload">
+
                 </div>
                 <form class="mt-2">
                     <div class="form-group row">
-                      <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                      <label for="inputEmail3" class="col-sm-2 col-form-label">Tag</label>
                       <div class="col-sm-7">
                         <select class="form-control custom-select mr-sm-2" id="inlineFormCustomSelect">
                             <option selected>Choose...</option>
@@ -432,10 +435,13 @@
         <div class="row">
           <div class="col-md-6">
             <label>Crop Image</label>
+            
             <div class="upload-frame " >
+              <img src="../../images/uploadIcon.png"/>
               <input type="file" class="file_upload"/>
-              <span class="upload-icon"></span>
             </div>
+
+
           </div>
           <div class="col-md-6">
             <label>Preview</label>
