--- a/pages/filterSearch/filterSearch.html
+++ b/pages/filterSearch/filterSearch.html
@@ -318,7 +318,7 @@
         </section>
 
         <section class="mt-4">
-          <div class="row simple-effet-image mt-3 ml-5 justify-content-center clearfix">
+          <div class="row simple-effet-image mt-3  justify-content-center clearfix">
             <div class="col-sm-4">
               <div class="effect-image-1">
                 <img src="https://www.montereyairport.com/sites/main/files/main-images/camera_lense_0.jpeg"
