--- a/pages/portfolioimage/portfolioimages.html
+++ b/pages/portfolioimage/portfolioimages.html
@@ -269,8 +269,8 @@
                 </div>
               </div>
 
-              <div class="col-lg-5 col-md-6">
-                <div class="card ml-5" style="">
+              <div class="col-lg-5 col-md-6 pl-3">
+                <div class="card " style="">
                   <div class="card-body">
                     <div class="row title-div">
                       <img
