--- a/pages/landingPage/landingPage.html
+++ b/pages/landingPage/landingPage.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../../scss/adminlte.css" />
     <link rel="stylesheet" href="../landingPage/landingPage.css" />
     <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../dist/css/commonFont.css" />
+
 </head>
 
 <body class="" style="background: #e4e4e4; margin-right: 0%;">
@@ -77,16 +79,15 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row">
-                <h5 class="micafilatag" style="margin-left: 44%;">Best of MiCafila!</h5>
+            <div class="row justify-content-center">
+                <h5 >Best of MiCafila!</h5>
                 <span></span>
             </div>
         </div>
 
         <div class="container-fluid">
-            <div class="row landingMain" style="background-color: white;">
-                <h4 style="padding-left: 37%;
-                    padding-top: 3%;">Some of our community's best
+            <div class="row  justify-content-center" style="background-color: white;">
+                <h4 >Some of our community's best
                     <br>
                     sharing their finest!
                 </h4>
