--- a/pages/editProfile/editprofile.html
+++ b/pages/editProfile/editprofile.html
@@ -17,13 +17,13 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <!-- Theme style -->
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" />
-    <!-- <link rel=" stylesheet" type="text/css" href="sass/main.css" /> -->
-    <!-- <link rel="stylesheet" href="dist/css/adminlte.min.css"> -->
     <link rel="stylesheet" href="../../scss/adminlte.css" />
     <link rel="stylesheet" href="../editProfile/editprofile.css" />
     <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../dist/css/commonButton.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+
 </head>
 
 <body class="hold-transition sidebar-mini" style="background: #e4e4e4;">
@@ -403,7 +403,7 @@
                                                                 pattern="[1-9]{1}[0-9]{9}" maxlength="10" id="mobileNo"
                                                                 placeholder="Enter Mobile Number" />
                                                         </div>
-                                                        <button class="saveBtn">Save</button>
+                                                        <button class="btn primary-btn">Save</button>
                                                     </div>
                                                     <div class="col-md-3"></div>
                                                 </div>
