login html changes

--- a/pages/connection.html/connection.html
+++ b/pages/connection.html/connection.html
@@ -26,7 +26,7 @@
     />
  
     <link rel="stylesheet" href="../../scss/adminlte.css" />
-    <link rel="stylesheet" href="./chat.css" />
+    <link rel="stylesheet" href="./connection.css" />
     <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
     <link
       rel="stylesheet"
@@ -453,7 +453,6 @@
                             />
                           </div>
                           <div class="col-lg-7">
-                            <span class="profile-name">David James</span>
                             <p class="profile-desc">
                               Lorem ipsum dolor sit amet consectetur adipisicing
                               elit. Iusto ipsam at cumque omnis eos debitis
