--- a/pages/filterSearch/filterSearch.html
+++ b/pages/filterSearch/filterSearch.html
@@ -259,12 +259,12 @@
 
       <div class="col-md-12">
         <section class="connected-people mt-4 ssprofile">
-          <div class="row justify-content-center">
+          <div class="row justify-content-left ml-5 mb-2">
             <h4 class="search-label">
               <b> People you'd want to connect with</b>
             </h4>
           </div>
-          <div class="row ml-5 justify-content-center profile-photo">
+          <div class="row ml-5 justify-content-left profile-photo">
             <div class="col-md-2 profile-box">
               <div class="cerative"></div>
               <img src="../../images/thumbImg_4.png" alt="..." class="img-thumbnail" />
