--- a/pages/newConnections/newConnections.html
+++ b/pages/newConnections/newConnections.html
@@ -412,7 +412,7 @@
                                                     <div class="row no-gutters">
                                                         <div class="col-lg-7 col-md-7">
                                                             <div class="row no-gutters">
-                                                                <div class="col-sm- res-img">
+                                                                <div class="col-sm-2 res-img">
                                                                     <img style="width: 100%;"
                                                                         src="../../images/scot.png" alt="" />
                                                                 </div>
