--- a/pages/recommendation/recommendation.html
+++ b/pages/recommendation/recommendation.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./recommendation.css" />
   <!-- IonIcons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+  <link rel="stylesheet" href="../../dist/css/commonFont.css" />
   <!-- Theme style -->
   <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="../../dist/css/commonButton.css" />
@@ -193,6 +194,7 @@
           <div class="row mt-4 mr-4">
             <div class="col-md-4">
               <div class="card">
+                
                 <img src="../../images/superman.png" class="card-img-top" alt="...">
                 <div class="content-box sscontentbox">
                   <h5 class="card-text">Abirami Rajesh
