--- a/pages/soltuionRequest/solutionRequest.html
+++ b/pages/soltuionRequest/solutionRequest.html
@@ -478,7 +478,7 @@
                     </div>
                     <div class="multi-screen-level">
                     <div class="screen1" style="display: none;">
-                      <div class="row ml-3">
+                      <div class="row ml-3 solution-title">
                         <p><b>Need help to solve a problem? No problem!</b></p>
                       </div>
                       <div class="row ml-3 mr-3">
@@ -520,7 +520,7 @@
                           </p>
                         </div>
                       </div>
-                      <div class="row justify-content-end mt-3 mr-3">
+                      <div class="row justify-content-end mt-3 mr-3 problem-area">
                         <span>Awaiting reply from Super...</span>
                       </div>
                       <div class="row justify-content-end mt-3 mr-3">
@@ -530,8 +530,8 @@
                       </div>
                     </div>
 
-                    <div class="screen2" style="display: none;">
-                      <div class="row ml-3">
+                    <div class="screen2">
+                      <div class="row ml-3 solution-title">
                         <p><b>Need help to solve a problem? No problem!</b></p>
                       </div>
                       <div class="row ml-3 mr-3">
@@ -618,7 +618,7 @@
                     </div>
 
                     <div class="screen3 mr-3 ml-3" style="display: none;">
-                      <div class="row  screen3-title">
+                      <div class="row  solution-title">
                         <p>
                           <b
                             >Yaay! You and Super have successfully reached an
@@ -691,8 +691,8 @@
                                     </div>
                                    
                                     <ul class="container details">
-                                      <li><p><span class="glyphicon glyphicon-earphone one" style="width:50px;"></span>+91 90000 00000</p></li>
-                                      <li><p><span class="glyphicon glyphicon-envelope one" style="width:50px;"></span>somerandom@email.com</p></li>
+                                      <li><p><span class="glyphicon glyphicon-earphone one" style="width:50px;"></span><i class="fas fa-phone"></i> +91 90000 00000</p></li>
+                                      <li><p><span class="glyphicon glyphicon-envelope one" style="width:50px;"></span><i class="fas fa-envelope-square"></i> somerandom@email.com</p></li>
                                       <li><p><span class="glyphicon glyphicon-map-marker one" style="width:50px;"></span>Hyderabad</p></li>
                                       <li><p><span class="glyphicon glyphicon-new-window one" style="width:50px;"></span><a href="#">www.example.com</p></a>
                                     </ul>
@@ -711,8 +711,8 @@
                   </div>
 
                      <!-- Soltuion Screen  -->
-                     <div class="solution-screen3 screen4 mr-3 ml-3" style="">
-                      <div class="row  screen3-title">
+                     <div class="solution-screen3 screen4 mr-3 ml-3" style="display: none;">
+                      <div class="row  solution-title">
                         <p>
                           <b
                             >Reply to ITI's request
