--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -8,11 +8,11 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="../../scss/adminlte.css" />
-    <link rel="stylesheet" href="../header/header.html" />
+    <link rel="stylesheet" href="./header.css" />
     <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
 </head>
 
-<body class="hold-transition sidebar-mini" style="background: #e4e4e4;">
+<body class="hold-transition sidebar-mini sidebar-collapse" style="background: #e4e4e4;">
     <div class="wrapper">
         <!-- Navbar Main -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="box-shadow: 0px -1px 9px #666;">
@@ -47,6 +47,7 @@
                 <li class="nav-item profilepic">
                     <a class="nav-link" href="#"><img src="../../images/josh.png" style="width: 30px;" /></a>
                 </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
                         <i class="far fa-bell"></i>
@@ -72,6 +73,9 @@
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                     </div>
+                </li>
+                <li class="nav-item search-icon">
+                    <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
                 </li>
             </ul>
         </nav>
