--- a/pages/chat/chat.html
+++ b/pages/chat/chat.html
@@ -837,14 +837,14 @@
                               </div>
                               <div class="msg_cotainer">
                                 I am good too, thank you for your chat template
-                                <span class="msg_time">9:00 AM, Today</span>
+                                <span class="msg_time">02/02/2021 12:12AM </span>
                               </div>
                             </div>
                             <div class="d-flex justify-content-end mb-4">
                               <div class="msg_cotainer_send">
                                 You are welcome
                                 <span class="msg_time_send"
-                                  >9:05 AM, Today</span
+                                  >02/02/2021 12:12AM </span
                                 >
                               </div>
                               <div class="img_cont_msg">
