--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -527,12 +527,13 @@
                       <h4 class="text-center feed-title">
                         Jamie Chan wants your feedback.
                       </h4>
-                      <div class="row">
+                      <div class="row mb-1">
                         <div class="col-md-4 text-center">
                           <img
                             style="width: 100px;"
                             class="image-responsive rounded rounded-circle"
                             src="../../images/superman.png"
+                            
                             alt=""
                           />
                           <div class="viewProfile">
@@ -541,21 +542,23 @@
                         </div>
                         <div class="feedCnt col-md-8">
                           <p>
-                            Lorem 
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta repellendus labore molestias doloremque eaque. Eos, quaerat quisquam suscipit veniam similique quos. Adipisci sit velit, eaque eveniet qui quasi reprehenderit? Maiores!
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta repellendus labore molestias doloremque eaque. Eos, quaerat quisquam suscipit veniam similique quos. Adipisci sit velit, eaque eveniet qui quasi reprehenderit? Maiores!
                           </p>
-                          <div class="text-center">
-                            <button
-                              class="btn primary-btn-rounnded pri-btn-lg  m-1"
-                            >
-                              Accept
-                            </button>
-                            <button
-                              class="btn primary-btn-outline pri-btn-lg  m-1"
-                            >
-                              Ignore
-                            </button>
-                          </div>
+                         
                         </div>
+                      </div>
+                      <div class="text-center ">
+                        <button
+                          class="btn primary-btn-rounnded pri-btn-lg  m-1"
+                        >
+                          Accept
+                        </button>
+                        <button
+                          class="btn primary-btn-outline pri-btn-lg  m-1"
+                        >
+                          Ignore
+                        </button>
                       </div>
                     </div>
                     <!-- <div class="msgsection problem">
