--- a/pages/mycafila/mycafila.html
+++ b/pages/mycafila/mycafila.html
@@ -747,6 +747,114 @@
                             ><i class="fas fa-trash-alt"></i
                           ></span>
                         </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
+                        <li class="list-group-item">
+                          <img
+                            src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                            alt="user"
+                            class="avatar-img"
+                          />
+
+                          <span>Cras justo odio</span>
+                          <span class="trash"
+                            ><i class="fas fa-trash-alt"></i
+                          ></span>
+                        </li>
                       </ul>
                     </div>
                   </form>
