--- a/pages/network/network.html
+++ b/pages/network/network.html
@@ -472,7 +472,6 @@
                               ></a>
                             </li>
                           </ul>
-                    
                         </div>
                       </div>
                       <div class="card-body p-0 responsive-table">
@@ -504,11 +503,8 @@
                               <th style="width: 10%;" class="text-center">
                                 Location
                               </th>
-                              <th style="width: 25%;" class="text-center">
+                              <th style="width: 40%;" class="text-center">
                                 Action
-                              </th>
-                              <th style="width: 25%;" class="text-center">
-                                Remove
                               </th>
                             </tr>
                           </thead>
@@ -542,31 +538,32 @@
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
-                                  <i class="fas fa-user-plus"></i> Follow
+                                  <i class="fas fa-user-plus"></i>
                                 </button>
                                 <button
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
                                   <i class="fas fa-question-circle"></i>
-                                  Question
                                 </button>
                                 <button
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
-                                  <i class="fas fa-paper-plane"></i> Request
+                                  <i class="fas fa-paper-plane"></i>
                                 </button>
-                              </td>
-                              <td class="project-actions text-right">
-                                <a class="btn btn-danger btn-sm" href="#">
+                                <button
+                                  type="button"
+                                  class="btn btn-danger m-1"
+                                >
                                   <i class="fas fa-trash"> </i>
-                                  Delete
-                                </a>
-                                <a class="btn btn-danger btn-sm" href="#">
+                                </button>
+                                <button
+                                  type="button"
+                                  class="btn btn-danger"
+                                >
                                   <i class="fas fa-ban"></i>
-                                  Block
-                                </a>
+                                </button>
                               </td>
                             </tr>
                             <tr>
@@ -591,31 +588,33 @@
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
-                                  <i class="fas fa-user-plus"></i> Follow
+                                  <i class="fas fa-user-plus"></i>
                                 </button>
                                 <button
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
                                   <i class="fas fa-question-circle"></i>
-                                  Question
                                 </button>
                                 <button
                                   type="button"
                                   class="btn primary-btn m-1"
                                 >
-                                  <i class="fas fa-paper-plane"></i> Request
+                                  <i class="fas fa-paper-plane"></i>
                                 </button>
-                              </td>
-                              <td class="project-actions text-right">
-                                <a class="btn btn-danger btn-sm" href="#">
+                            
+                                <button
+                                  type="button"
+                                  class="btn btn-danger m-1"
+                                >
                                   <i class="fas fa-trash"> </i>
-                                  Delete
-                                </a>
-                                <a class="btn btn-danger btn-sm" href="#">
+                                </button>
+                                <button
+                                  type="button"
+                                  class="btn btn-danger"
+                                >
                                   <i class="fas fa-ban"></i>
-                                  Block
-                                </a>
+                                </button>
                               </td>
                             </tr>
                           </tbody>
