--- a/pages/commonModel/commonModel.html
+++ b/pages/commonModel/commonModel.html
@@ -1,70 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Bootstrap 4 Modal</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<style>
-    .bs-example{
-    	margin: 20px;
-    }
-</style>
-</head>
-<body>
-<div class="bs-example">
-
-    <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-    Confirm
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Bootstrap 4 Modal</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./commonModel.css" />
+    <link
+      rel="stylesheet"
+      href="../../plugins/fontawesome-free/css/all.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+      .bs-example {
+        margin: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="bs-example">
+      <!-- Button trigger modal -->
+      <div class="row">
+        <div class="col-md-1">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#exampleModalCenter"
+          >
+            Confirm
           </button>
         </div>
-        <div class="modal-body">
-            Are you sure you want to delete this item?
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="exampleModalCenter"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="exampleModalCenterTitle"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">
+                  Modal title
+                </h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Are you sure you want to delete this item?
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  No
+                </button>
+                <button type="button" class="btn btn-primary">Yes</button>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-          <button type="button" class="btn btn-primary">Yes</button>
+        <div class="col-md-1">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#successModalCenter"
+          >
+            Success
+          </button>
+        </div>
+        <div class="col-md-1 mr-3">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#image-viewer"
+          >
+            Image
+          </button>
+        </div>
+      </div>
+
+      <div
+        class="modal fade"
+        id="image-viewer"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="successModalCenter"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-sm " role="document">
+          <!-- size  modal-xl  modal-lg modal-sm-->
+          <div class="modal-content model-image-viewer">
+            <span class="close-icon" data-dismiss="modal" aria-label="Close"><i class="far fa-times-circle" ></i></span>
+            <section>
+              <!-- <img src="../../images/superman.png" width="100%"/> -->
+              <!-- <div class="audio-section">
+                <div class="audio-img">
+                  <audio controls class="audio">
+                    <source src="horse.ogg" type="audio/ogg" />
+                    <source src="horse.mp3" type="audio/mpeg" />
+                    Your browser does not support the audio element.
+                  </audio>
+                  <img src="../../images/audiolns.png" width="100%" />
+                </div>
+              </div> -->
+              <video width="100%" controls>
+                <source src="movie.mp4" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+              </video>
+            </section>
+          </div>
+        </div>
+      </div>
+
+      <div class="audio-section">
+        <div class="audio-img">
+          <audio controls class="audio">
+            <source src="horse.ogg" type="audio/ogg" />
+            <source src="horse.mp3" type="audio/mpeg" />
+            Your browser does not support the audio element.
+          </audio>
+          <img src="../../images/audiolns.png" width="100%" />
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="successModalCenter"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="successModalCenter"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-body">
+              success message
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-
-
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#successModalCenter">
-    Success
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="successModalCenter" tabindex="-1" role="dialog" aria-labelledby="successModalCenter" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-    
-        <div class="modal-body">
-             success message
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-</body>
+  </body>
 </html>
