--- a/pages/dashboardListUser/dashboardListUser.html
+++ b/pages/dashboardListUser/dashboardListUser.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="../../scss/adminlte.css" />
     <link rel="stylesheet" href="./dashboardListUser.css" />
-    link rel="stylesheet" href="../../dist/css/commonButton.css" />
+   <link rel="stylesheet" href="../../dist/css/commonButton.css" />
     <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
     <link
       rel="stylesheet"
